Fix dark mode text to be a lighter gray for password reset request page

--- a/ui/src/App/PasswordResetRequest/PasswordResetRequestPage.scss
+++ b/ui/src/App/PasswordResetRequest/PasswordResetRequestPage.scss
@@ -58,6 +58,10 @@
 
 @include main.dark-theme {
 	.password-reset-request-page {
+		.password-reset-description {
+			color: main.$light-gray;
+		}
+
 		.paragraph-1 {
 			color: main.$turquoise;
 		}
